1999-02-04  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/Deliver/Envelope.pm (DESTROY): Shut down the SMTP
        connection properly.

	* lib/Mj/Deliver/SMTP.pm (QUIT): New method to shut down the
        connection.

Wed Feb  3 17:55:15 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm (valid_list): If not 'ALL' or 'GLOBAL',
 	downcase the list name.

	* lib/Mj/CommandProps.pm (command_legal): Downcase the command.

	* lib/Majordomo.pm (substitute_vars): Remove debugging printout.

	* lib/Mj/TextOutput.pm (set): Anchor matches so prevent screwups
        on addresses with dashes in them.

Tue Feb  2 22:10:27 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Digest/Build.pm (idx_subject_author): Renamed from
 	idx_wasilko.

	* lib/Majordomo.pm (get_done): Fix undef warning; don't unlink
 	temporaries if there were none to unlink.

Mon Feb  1 13:09:50 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Resend.pm (_exclude): Make sure not to try to canonize
 	the user address if it isn't valid.

	* lib/Mj/List.pm (flag_set): An address has no flags set if it
 	isn't valid.

	* lib/Mj/Deliver/Envelope.pm (new): Be a bit more tolerant of
 	envelopes with no sender.

	* lib/Mj/Deliver/SMTP.pm (senddata): Don't print anything to the
 	debug log.

	* lib/Mj/Resend.pm (_add_fters): Take a hashref of substitutions
 	and apply them to the fronters/footers before adding.
	(_post): Pass a set of substitutions to _add_fters.

	* bin/mj_resend: Don't include mailbox separator in messages sent
 	to post().

	* lib/Mj/Resend.pm (_ck_tbody_line): Comment out logging; too much
 	verbosity.

	* lib/Mj/Config.pm (parse_attachment_rules): Properly output code
 	for 'deny' action.

Sun Jan 31 16:34:54 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Format.pm (who): Add 'short' mode that just prints the
 	address lists.

	* lib/Mj/Resend.pm (_post): Remove debugging prints.
