@@ -78,6 +78,8 @@ Sean Proske
   suggestions and fixes.
 Russell Steinthal 
   for the qmail configuration maintenance code.
+Bob Snyder
+  for the SMTP QUIT idea.
 
 Note that this list is basically unordered and is not intended to convey
 the magnitude of any individual contribution.  Everyone who helps is
